Gravity sketch added.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
       <button>
         <span class="button-top" id="fabrik-button">4. FABRIK</span>
       </button>
+      <button>
+        <span class="button-top" id="gravity-button">5. Gravity</span>
+      </button>
     </div>
 
     <script type="module" src="./src/index.js"></script>
